syntax = "proto3";

package font_services;

import "index.proto";

service FontApi {
  rpc FontSplit (api_interface.InputTemplate) returns (stream api_interface.EventMessage);
}
